src/jobs.scss
.jobs {

    margin-top: 3em;

    .search {
        background-color: #ECF9FF;
        padding: 20px 0;

        .labelTitle {
            font-size: 1.5em;
            color: black;
        }
        .custom-radio input {
            opacity: 0;
            position: fixed;
            width: 0;
        }
        .custom-radio label {
            cursor: pointer;
            overflow: hidden;
            background-color: #9AD3FE;
            padding: 0.3em 1.2em;
            border: 1px solid lightgray;
            border-radius: 10px;
        }
        input:checked + label, input + label:hover {
            background: #478EFF;
            color: white;
        }
    }

    .job-posting, .job-posting-full {
        padding: 2.5vh 40px;
        margin: 4vh 5vw;
    }

    .job-posting {
        background: rgba(250, 250, 250, 0.85);
        border-radius: 5px;
        border: 1px solid black;
        box-shadow: 5px 5px 5px lightgray;
    }

    a {
        color: #007bff;
    }

    .job-posting-role {
        font-size: larger;
    }

    #description {
        margin: 1vh 0;
        overflow: hidden;
        display: -webkit-box;
        -webkit-box-orient: vertical; 
        -webkit-line-clamp: 3;
    }
}

